cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_10087_482590920.yaml
Resources:
  MultiVoicedPollyVpc46F55F6E:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/Resource
  MultiVoicedPollyVpcPublicSubnet1Subnet6F9D1ADC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/17
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1/Subnet
  MultiVoicedPollyVpcPublicSubnet1RouteTable77918427:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1/RouteTable
  MultiVoicedPollyVpcPublicSubnet1RouteTableAssociationA628FC02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MultiVoicedPollyVpcPublicSubnet1RouteTable77918427
      SubnetId:
        Ref: MultiVoicedPollyVpcPublicSubnet1Subnet6F9D1ADC
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1/RouteTableAssociation
  MultiVoicedPollyVpcPublicSubnet1DefaultRouteAE47295D:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: MultiVoicedPollyVpcPublicSubnet1RouteTable77918427
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MultiVoicedPollyVpcIGW20DEE7D0
    DependsOn:
      - MultiVoicedPollyVpcVPCGW5F7485F1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1/DefaultRoute
  MultiVoicedPollyVpcPublicSubnet1EIP74814D68:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1/EIP
  MultiVoicedPollyVpcPublicSubnet1NATGatewayD5088211:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: MultiVoicedPollyVpcPublicSubnet1Subnet6F9D1ADC
      AllocationId:
        Fn::GetAtt:
          - MultiVoicedPollyVpcPublicSubnet1EIP74814D68
          - AllocationId
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PublicSubnet1/NATGateway
  MultiVoicedPollyVpcPrivateSubnet1SubnetF0305AD9:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.128.0/17
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PrivateSubnet1/Subnet
  MultiVoicedPollyVpcPrivateSubnet1RouteTable42B1C8EE:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PrivateSubnet1/RouteTable
  MultiVoicedPollyVpcPrivateSubnet1RouteTableAssociation90BEEA2D:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: MultiVoicedPollyVpcPrivateSubnet1RouteTable42B1C8EE
      SubnetId:
        Ref: MultiVoicedPollyVpcPrivateSubnet1SubnetF0305AD9
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PrivateSubnet1/RouteTableAssociation
  MultiVoicedPollyVpcPrivateSubnet1DefaultRoute8F0F8AD1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: MultiVoicedPollyVpcPrivateSubnet1RouteTable42B1C8EE
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: MultiVoicedPollyVpcPublicSubnet1NATGatewayD5088211
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/PrivateSubnet1/DefaultRoute
  MultiVoicedPollyVpcIGW20DEE7D0:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyVpc
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/IGW
  MultiVoicedPollyVpcVPCGW5F7485F1:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
      InternetGatewayId:
        Ref: MultiVoicedPollyVpcIGW20DEE7D0
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyVpc/VPCGW
  MultiVoicedPollyFileSystem2209D918:
    Type: AWS::EFS::FileSystem
    Properties:
      FileSystemTags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyFileSystem
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyFileSystem/Resource
  MultiVoicedPollyFileSystemEfsSecurityGroupD6EDEBEA:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MultiVoicedPolly/MultiVoicedPollyFileSystem/EfsSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: MultiVoicedPolly/MultiVoicedPollyFileSystem
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyFileSystem/EfsSecurityGroup/Resource
  MultiVoicedPollyFileSystemEfsSecurityGroupfromMultiVoicedPollyMultiVoicedPollyLambdaFunctionSecurityGroup1996CCFF204951288331:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from MultiVoicedPollyMultiVoicedPollyLambdaFunctionSecurityGroup1996CCFF:2049
      FromPort: 2049
      GroupId:
        Fn::GetAtt:
          - MultiVoicedPollyFileSystemEfsSecurityGroupD6EDEBEA
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - MultiVoicedPollyLambdaFunctionSecurityGroup09410A73
          - GroupId
      ToPort: 2049
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyFileSystem/EfsSecurityGroup/from MultiVoicedPollyMultiVoicedPollyLambdaFunctionSecurityGroup1996CCFF:2049
  MultiVoicedPollyFileSystemEfsMountTarget1DE5A0A2D:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId:
        Ref: MultiVoicedPollyFileSystem2209D918
      SecurityGroups:
        - Fn::GetAtt:
            - MultiVoicedPollyFileSystemEfsSecurityGroupD6EDEBEA
            - GroupId
      SubnetId:
        Ref: MultiVoicedPollyVpcPrivateSubnet1SubnetF0305AD9
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyFileSystem/EfsMountTarget1
  MultiVoicedPollyFileSystemMultiVoicedPollyAccessPointFE316469:
    Type: AWS::EFS::AccessPoint
    Properties:
      FileSystemId:
        Ref: MultiVoicedPollyFileSystem2209D918
      PosixUser:
        Gid: "0"
        Uid: "0"
      RootDirectory:
        CreationInfo:
          OwnerGid: "0"
          OwnerUid: "0"
          Permissions: "0777"
        Path: /
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyFileSystem/MultiVoicedPollyAccessPoint/Resource
  MultiVoicedPollyInputBucket470FAC63:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName:
        Fn::Join:
          - ""
          - - multi-voiced-polly-input-
            - Ref: AWS::AccountId
            - "-"
            - Ref: AWS::Region
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyInputBucket/Resource
  MultiVoicedPollyOutputBucketC9B269A6:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName:
        Fn::Join:
          - ""
          - - multi-voiced-polly-output-
            - Ref: AWS::AccountId
            - "-"
            - Ref: AWS::Region
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyOutputBucket/Resource
  MultiVoicedPollyLambdaFunctionServiceRoleEB894B40:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
    DependsOn:
      - MultiVoicedPollyFileSystemEfsMountTarget1DE5A0A2D
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyLambdaFunction/ServiceRole/Resource
  MultiVoicedPollyLambdaFunctionServiceRoleDefaultPolicy46565EFD:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: elasticfilesystem:ClientMount
            Condition:
              StringEquals:
                elasticfilesystem:AccessPointArn:
                  Fn::Join:
                    - ""
                    - - "arn:"
                      - Ref: AWS::Partition
                      - ":elasticfilesystem:"
                      - Ref: AWS::Region
                      - ":"
                      - Ref: AWS::AccountId
                      - :access-point/
                      - Ref: MultiVoicedPollyFileSystemMultiVoicedPollyAccessPointFE316469
            Effect: Allow
            Resource: "*"
          - Action: elasticfilesystem:ClientWrite
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":elasticfilesystem:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :file-system/
                  - Ref: MultiVoicedPollyFileSystem2209D918
        Version: "2012-10-17"
      PolicyName: MultiVoicedPollyLambdaFunctionServiceRoleDefaultPolicy46565EFD
      Roles:
        - Ref: MultiVoicedPollyLambdaFunctionServiceRoleEB894B40
    DependsOn:
      - MultiVoicedPollyFileSystemEfsMountTarget1DE5A0A2D
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyLambdaFunction/ServiceRole/DefaultPolicy/Resource
  MultiVoicedPollyLambdaFunctionSecurityGroup09410A73:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatic security group for Lambda Function MultiVoicedPollyMultiVoicedPollyLambdaFunction25F5A779
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: MultiVoicedPollyVpc46F55F6E
    DependsOn:
      - MultiVoicedPollyFileSystemEfsMountTarget1DE5A0A2D
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyLambdaFunction/SecurityGroup/Resource
  MultiVoicedPollyLambdaFunction7A112C17:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ImageUri:
          Fn::Join:
            - ""
            - - Ref: AWS::AccountId
              - .dkr.ecr.
              - Ref: AWS::Region
              - "."
              - Ref: AWS::URLSuffix
              - /aws-cdk/assets:8751dff2852630b7034cecebcd6912fcd79a48c57e72990cfb473acdb299eef2
      Role:
        Fn::GetAtt:
          - MultiVoicedPollyLambdaFunctionServiceRoleEB894B40
          - Arn
      Environment:
        Variables:
          INPUT_BUCKET:
            Ref: MultiVoicedPollyInputBucket470FAC63
          OUTPUT_BUCKET:
            Ref: MultiVoicedPollyOutputBucketC9B269A6
      FileSystemConfigs:
        - Arn:
            Fn::Join:
              - ""
              - - "arn:"
                - Ref: AWS::Partition
                - ":elasticfilesystem:"
                - Ref: AWS::Region
                - ":"
                - Ref: AWS::AccountId
                - :access-point/
                - Ref: MultiVoicedPollyFileSystemMultiVoicedPollyAccessPointFE316469
          LocalMountPath: /mnt/fs
      FunctionName: multiVoicedPolly
      MemorySize: 256
      PackageType: Image
      Timeout: 900
      VpcConfig:
        SecurityGroupIds:
          - Fn::GetAtt:
              - MultiVoicedPollyLambdaFunctionSecurityGroup09410A73
              - GroupId
        SubnetIds:
          - Ref: MultiVoicedPollyVpcPrivateSubnet1SubnetF0305AD9
    DependsOn:
      - MultiVoicedPollyFileSystemEfsMountTarget1DE5A0A2D
      - MultiVoicedPollyFileSystemEfsSecurityGroupfromMultiVoicedPollyMultiVoicedPollyLambdaFunctionSecurityGroup1996CCFF204951288331
      - MultiVoicedPollyLambdaFunctionServiceRoleDefaultPolicy46565EFD
      - MultiVoicedPollyLambdaFunctionServiceRoleEB894B40
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyLambdaFunction/Resource
      aws:asset:path: asset.8751dff2852630b7034cecebcd6912fcd79a48c57e72990cfb473acdb299eef2
      aws:asset:dockerfile-path: Dockerfile
      aws:asset:property: Code.ImageUri
  MultiVoicedPollyLambdaPolicyC50799D7:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: s3:ListObjectsV2
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-input-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: s3:ListObjectsV2
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-output-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: s3:DeleteObjects
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-input-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: s3:DeleteObjects
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-output-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: s3:GetObject
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-input-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: s3:GetObject
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-output-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: s3:ListBucket
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-output-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
          - Action: s3:ListBucket
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-input-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
          - Action: s3:PutObject
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - arn:aws:s3:::multi-voiced-polly-output-
                  - Ref: AWS::AccountId
                  - "-"
                  - Ref: AWS::Region
                  - /*
          - Action: polly:StartSpeechSynthesisTask
            Effect: Allow
            Resource: "*"
          - Action: polly:GetSpeechSynthesisTask
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: MultiVoicedPollyLambdaPolicyC50799D7
      Roles:
        - Ref: MultiVoicedPollyLambdaFunctionServiceRoleEB894B40
    Metadata:
      aws:cdk:path: MultiVoicedPolly/MultiVoicedPollyLambdaPolicy/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/31RTW/CMAz9LdxDWJkm7ThgA/WwqWoR99SYLtDGKB+gKup/X9IOyi47+fnZeXm2E568zPnT5E1czRT2p5kH0sh9YQWcWI6GnAZkC2PQBq6SqmIrUsZqB5atDureEnAo7KWVpDoW5TzCnPvdGWJtl61Y5spaQuFKhf3bEeXkLG5FWePIj1z4nUCKqHxvjuAjzWL4EnYjLF5FyzItLwGOwqmyqAO+NQxOfrOFDVN+N6gsKxCclrbdaHLn3sO/RKoqjcZ0DA+G+7WssWiNxSY2/s0+ySm7FboKfhYA4VFGUvXeHtKOmWfulw5Og+0BdawWTbkX3L9TyHXaiArXTsFtEzfcMSka7nMa9tfHjMKu+4EHFLyCnop4SMMf9PrTxhrP8UxGWtLtUhjsOqZoj/xoZpfklSdznkyORsqpDgPJBnk+xB8CbCexQgIAAA==
    Metadata:
      aws:cdk:path: MultiVoicedPolly/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
